# CMake_CS_Yaml

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt  yamldotnet.cs
InputFile/: CMakeLists.txt  InputFile.cs
InputFile/Properties/: AssemblyInfo.cs
